# courier

./: .gitignore  Cargo.toml  Package.swift  build.rs  build.sh  emails.example.toml  main.swift  meson.build
Tests/: LinuxMain.swift
Tests/courierTests/: XCTestManifests.swift  courierTests.swift
include/: app.h  appwin.h
src/: lib.rs  main.rs
src/cli/: mod.rs
src/emails/: mod.rs
src/ui/: app.c  appwin.c  courier.slint  main.c  mod.rs
