[package]
name = "courier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "0.2.1"
clap = "3.0.14"
log = "0.4.16"
pretty_env_logger = "0.4.0"
#imap = { git = "https://github.com/jonhoo/rust-imap", branch = "master", version = "3.0.0-alpha.6"}
imap = "2.4.1"
native-tls = "0.2.9"
gtk = { version = "0.4.7", package = "gtk4", features = ["v4_6"]}

[build-dependencies]
slint-build = "0.2.1"
