[package]
name = "courier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.14"
log = "0.4.16"
pretty_env_logger = "0.4.0"
imap = "2.4.1"
native-tls = "0.2.9"
gtk = { version = "0.4.7", package = "gtk4", features = ["v4_6"]}
gio = "0.15.10"
toml = "0.5.8"
anyhow = "1.0.56"

[lib]
name = "libcourier"
path = "src/lib.rs"
